# kernl

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md
benchmark/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: cli.rs  lib.rs  main.rs
compiler/src/codegen/: debug_info.rs  llvm.rs  llvm_opt.rs  mod.rs  optimize.rs  wasm.rs  wasm_binary.rs
compiler/src/debugger/: mod.rs
compiler/src/driver/: mod.rs  targets.rs
compiler/src/incremental/: mod.rs
compiler/src/lexer/: mod.rs  token.rs
compiler/src/modules/: mod.rs
compiler/src/parser/: ast.rs  mod.rs
compiler/src/profiler/: instrument.rs  mod.rs
compiler/src/proof/: mod.rs
compiler/src/repl/: mod.rs
compiler/src/runtime/: executor.rs  mod.rs
compiler/src/semantic/: mod.rs
compiler/src/smt/: contracts.rs  mod.rs
compiler/src/stdlib/: mod.rs
compiler/src/typeck/: mod.rs
compiler/src/verify/: mod.rs
docs/: architecture.md  debugging.md  examples.md  getting-started.md
examples/: clamp.knl  mult_table.knl  recommend.knl  sum.knl  transfer.knl
lsp/: Cargo.toml
lsp/src/: error.rs  (+4 more)
pkg/: Cargo.toml
registry-server/: Cargo.toml  Dockerfile  HOSTING.md  docker-compose.yml
registry-server/src/: auth.rs  config.rs  handlers.rs  main.rs  rate_limit.rs  storage.rs
resolver/: Cargo.toml
resolver/src/: config.rs  handler.rs  llm.rs  main.rs
runtime/: Makefile  kernl_profile.c  kernl_rt.c  kernl_rt.h
self-host/: README.md  evaluator.knl  formatter.knl  optimizer.knl  parser.knl  tokenizer.knl  typechecker.knl
spec/: LANGUAGE.md
(+58 files in other folders)
