[package]
name = "kernlc"
version = "0.1.0"
edition = "2024"
description = "The kernl compiler — an AI-native programming language"
license = "MIT"

[[bin]]
name = "kernl"
path = "src/bin/kernl.rs"

[dependencies]
wasm-encoder = "0.248"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
