[package]
name = "kernl-registry"
version = "0.1.0"
edition = "2024"
description = "Package registry server for kernl"
license = "MIT"

[[bin]]
name = "kernl-registry"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
